--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,11 @@
 
 html {
     background-color: $html-bg-color;
+    box-sizing: border-box;
+    padding: 0;
+}
+
+body{
+    padding: 0;
+    margin: 0;
 }
