feature: flex box srtucture completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div
   class="wrapper flex justify-content-center align-items-center surface-100 w-screen h-screen"
-></div>
+>
+  <app-container></app-container>
+</div>
