--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div
   class="wrapper flex justify-content-center align-items-center surface-100 w-screen h-screen"
 >
+  <p-toast position="top-right"></p-toast>
   <app-container></app-container>
 </div>
