feature: table structure added

--- a/src/app/features/manager/container/container.component.html
+++ b/src/app/features/manager/container/container.component.html
@@ -1,3 +1,4 @@
-<div class="lg:max-h-screen p-5 surface-0 border-round-lg">
+<div class="p-5 surface-0 border-round-lg min-h-screen sm:min-h-0 max-w-screen">
   <app-header></app-header>
+  <app-table></app-table>
 </div>
