--- a/src/app/features/manager/header/header.component.html
+++ b/src/app/features/manager/header/header.component.html
@@ -1,4 +1,6 @@
-<div class="flex justify-content-between align-items-center gap-8">
-  <app-title title="Crypto currency manager "></app-title>
-  <app-add-currency></app-add-currency>
+<div
+  class="flex justify-content-center sm:justify-content-between align-items-center gap-8"
+>
+  <app-title title="Crypto currency manager"></app-title>
 </div>
+<app-add-currency></app-add-currency>
