--- a/src/app/features/manager/table/table.component.html
+++ b/src/app/features/manager/table/table.component.html
@@ -1,1 +1,26 @@
-<p>table works!</p>
+<p-table
+  [value]="currencies"
+  [tableStyle]="{ 'min-width': '60rem' }"
+  class="pt-3"
+>
+  <ng-template pTemplate="header" let-columns>
+    <tr>
+      <th class="text-left">#</th>
+      <th class="text-center">Name</th>
+      <th class="text-center">Price</th>
+      <th class="text-center">Email</th>
+      <th class="text-center">Last Trade</th>
+      <th class="text-center">Create At</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-currency let-columns="columns">
+    <tr>
+      <td>{{ currency.id }}</td>
+      <td class="text-center">{{ currency.name }}</td>
+      <td class="text-center">{{ currency.price }}</td>
+      <td class="text-center">{{ currency.email }}</td>
+      <td class="text-center">{{ currency.price }}</td>
+      <td class="text-center">{{ currency.price }}</td>
+    </tr>
+  </ng-template>
+</p-table>
