--- a/src/app/features/manager/table/table.component.html
+++ b/src/app/features/manager/table/table.component.html
@@ -1,5 +1,6 @@
 <p-table
-  [value]="currencies"
+  *ngIf="isFetched"
+  [value]="currenciesObjecyKeys"
   [tableStyle]="{ 'min-width': '60rem' }"
   class="pt-3"
 >
@@ -10,17 +11,33 @@
       <th class="text-center">Price</th>
       <th class="text-center">Email</th>
       <th class="text-center">Last Trade</th>
-      <th class="text-center">Create At</th>
+      <th class="text-center">Action</th>
     </tr>
   </ng-template>
-  <ng-template pTemplate="body" let-currency let-columns="columns">
+  <ng-template pTemplate="body" let-key let-columns="columns">
     <tr>
-      <td>{{ currency.id }}</td>
-      <td class="text-center">{{ currency.name }}</td>
-      <td class="text-center">{{ currency.price }}</td>
-      <td class="text-center">{{ currency.email }}</td>
-      <td class="text-center">{{ currency.price }}</td>
-      <td class="text-center">{{ currency.price }}</td>
+      <td>{{ currencies[key].id }}</td>
+      <td class="text-center">{{ currencies[key].name }}</td>
+      <td class="text-center">{{ currencies[key].price }}</td>
+      <td class="text-center">{{ currencies[key].email }}</td>
+      <td class="text-center">{{ currencies[key].last_trade }}</td>
+      <td class="text-center"><i class="pi pi-trash"></i></td>
     </tr>
   </ng-template>
 </p-table>
+
+<!-- Skeleton for Small Views -->
+<p-skeleton
+  *ngIf="!isFetched"
+  width="100%"
+  height="15rem"
+  class="sm:hidden"
+></p-skeleton>
+
+<!-- Skeleton for large Views -->
+<p-skeleton
+  class="hidden sm:block"
+  *ngIf="!isFetched"
+  width="60rem"
+  height="15rem"
+></p-skeleton>
