--- a/src/app/features/manager/table/table.component.html
+++ b/src/app/features/manager/table/table.component.html
@@ -1,6 +1,6 @@
 <p-table
-  *ngIf="isFetched"
-  [value]="currenciesObjecyKeys"
+  *ngIf="isFetched && currencies.length !== 0"
+  [value]="currencies"
   [tableStyle]="{ 'min-width': '60rem' }"
   class="pt-3"
 >
@@ -14,14 +14,19 @@
       <th class="text-center">Action</th>
     </tr>
   </ng-template>
-  <ng-template pTemplate="body" let-key let-columns="columns">
+  <ng-template pTemplate="body" let-currency let-columns="columns">
     <tr>
-      <td>{{ currencies[key].id }}</td>
-      <td class="text-center">{{ currencies[key].name }}</td>
-      <td class="text-center">{{ currencies[key].price }}</td>
-      <td class="text-center">{{ currencies[key].email }}</td>
-      <td class="text-center">{{ currencies[key].last_trade }}</td>
-      <td class="text-center"><i class="pi pi-trash"></i></td>
+      <td>{{ currency.id }}</td>
+      <td class="text-center">{{ currency.name }}</td>
+      <td class="text-center">{{ currency.price }}</td>
+      <td class="text-center">{{ currency.email }}</td>
+      <td class="text-center">{{ currency.trade_at | date : "medium" }}</td>
+      <td class="text-center">
+        <i
+          (click)="currencyDeleteHandler(currency.id)"
+          class="pi pi-trash cursor-pointer"
+        ></i>
+      </td>
     </tr>
   </ng-template>
 </p-table>
@@ -41,3 +46,7 @@
   width="60rem"
   height="15rem"
 ></p-skeleton>
+
+<app-nothing-to-show
+  [visibility]="isFetched && currencies.length === 0"
+></app-nothing-to-show>
