docs: comments added

--- a/src/app/features/manager/add-currency/add-currency.component.html
+++ b/src/app/features/manager/add-currency/add-currency.component.html
@@ -1,3 +1,4 @@
+<!-- Add new currency modal -->
 <p-dialog
   [styleClass]="'w-screen sm:w-auto'"
   header="Add New Currency"
@@ -64,6 +65,7 @@
   ></span>
 </p-dialog>
 
+<!-- fab btn for add currency -->
 <p-speedDial
   (click)="addCurrencyBtnHandler()"
   className="speedDialPos p-button-sm"
